[package]
name = "the_assoc_ty_ext"
version = "0.1.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv
description = "Canonical associated type (as in New Type idiom)"
documentation = "https://docs.rs/the_assoc_ty_ext"
readme = "README.md"
repository = "https://github.com/JohnScience/the_assoc_ty_ext"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["associated", "type"]
categories = ["no-std"]
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
include = [
    "/Cargo.toml",
    "/LICENSE_APACHE",
    "/LICENSE_MIT",
    "/README.md",
    "/src/lib.rs",
    "/tests/**",
]
# publish | not needed
# metadata | not needed
# default-run | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false
# resolver | not needed

[dependencies]
